// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders correctly 1`] = `
<DocumentFragment>
  .cache-9ic6y5 {
  margin-top: 40px;
}

.cache-sfdutq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-ag7udt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-1h5x8rs {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.cache-1h5x8rs.cache-1h5x8rs {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.cache-h4rrr2 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #d4dae7;
  opacity: inherit;
  cursor: default;
}

.cache-h4rrr2>* {
  margin-top: 0;
}

.cache-h4rrr2>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt2 cache-9ic6y5 e7ah3bn0"
  >
    <div
      class="e1l6meh00 cache-sfdutq e1l6meh01"
    >
      <div
        class="elb23zt1 e1l6meh00 cache-ag7udt e1l6meh01"
      >
        <h2
          class="e1g1zfwd0 cache-1h5x8rs e7ah3bn0"
        />
      </div>
      <div />
    </div>
    <div
      class="elb23zt0 cache-h4rrr2 e7ah3bn0"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly on edition mode 1`] = `
<DocumentFragment>
  .cache-9ic6y5 {
  margin-top: 40px;
}

.cache-sfdutq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-ag7udt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-1h5x8rs {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.cache-1h5x8rs.cache-1h5x8rs {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.cache-haz2zf {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #4f0599;
  opacity: inherit;
  cursor: default;
}

.cache-haz2zf>* {
  margin-top: 0;
}

.cache-haz2zf>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt2 cache-9ic6y5 e7ah3bn0"
  >
    <div
      class="e1l6meh00 cache-sfdutq e1l6meh01"
    >
      <div
        class="elb23zt1 e1l6meh00 cache-ag7udt e1l6meh01"
      >
        <h2
          class="e1g1zfwd0 cache-1h5x8rs e7ah3bn0"
        />
      </div>
      <div />
    </div>
    <div
      class="elb23zt0 cache-haz2zf e7ah3bn0"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-9ic6y5 {
  margin-top: 40px;
}

.cache-sfdutq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-ag7udt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-1h5x8rs {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.cache-1h5x8rs.cache-1h5x8rs {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.cache-1v21s23 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #d4dae7;
  opacity: 0.4;
  cursor: not-allowed;
}

.cache-1v21s23>* {
  margin-top: 0;
}

.cache-1v21s23>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt2 cache-9ic6y5 e7ah3bn0"
  >
    <div
      class="e1l6meh00 cache-sfdutq e1l6meh01"
    >
      <div
        class="elb23zt1 e1l6meh00 cache-ag7udt e1l6meh01"
      >
        <h2
          class="e1g1zfwd0 cache-1h5x8rs e7ah3bn0"
        />
      </div>
      <div />
    </div>
    <div
      class="elb23zt0 cache-1v21s23 e7ah3bn0"
      disabled=""
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly with small variant 1`] = `
<DocumentFragment>
  .cache-9ic6y5 {
  margin-top: 40px;
}

.cache-sfdutq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-ag7udt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-1h5x8rs {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.cache-1h5x8rs.cache-1h5x8rs {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.cache-wwboek {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 16px;
  padding-bottom: 16px;
  border: 1px solid #d4dae7;
  opacity: inherit;
  cursor: default;
}

.cache-wwboek>* {
  margin-top: 0;
}

.cache-wwboek>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt2 cache-9ic6y5 e7ah3bn0"
  >
    <div
      class="e1l6meh00 cache-sfdutq e1l6meh01"
    >
      <div
        class="elb23zt1 e1l6meh00 cache-ag7udt e1l6meh01"
      >
        <h2
          class="e1g1zfwd0 cache-1h5x8rs e7ah3bn0"
        />
      </div>
      <div />
    </div>
    <div
      class="elb23zt0 cache-wwboek e7ah3bn0"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;
